--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Aadil | RPS</title>
+        <script src="app.js" defer></script>
     </head>
     <body>
-        <script src="app.js"></script>
+
     </body>
 </html>
