Added Basic Styling to UI

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Aadil | RPS</title>
+        <link rel="stylesheet" href="style.css"/>
         <script src="app.js" defer></script>
     </head>
     <body>
-
+        <div class="choices">
+            <button class="option">Rock</button>
+            <button class="option">Paper</button>
+            <button class="option">Scissors</button>
+        </div>
     </body>
 </html>
